--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
-<div id="root"></div>
-
-<script type="text/babel">
-  const element = <h1 title="foo">Hello</h1>
-  const container = document.getElementById('root')
-  ReactDOM.render(element, container)
-</script>
+    <div id="root"></div>
+    <script type="text/babel" src="index.js"></script>
 </body>
 </html>
